2005-09-25 18:31  hjanuschka

	* include/bartlby.h, src/trigger.c, src/libs/mysql.c: trigger: can
	  now be enabled/disabled per trigger in web ui ui: add/modify
	  worker can now set and display workers selected datalib: api
	  modifications for trigger enable/disable feature

2005-09-25 17:24  hjanuschka

	* ChangeLog, bartlby.cfg, src/trigger.c, trigger/icq.sh: icq.sh
	  trigger for icq in combination with a running licq

2005-09-25 15:30  hjanuschka

	* trigger/jabber.sh: initial import

2005-09-25 15:30  hjanuschka

	* bartlby.cfg, src/check.c, src/config.c, src/daemon.c,
	  src/sched.c, src/trigger.c, trigger/mail.sh: cfg: jabber
	  variables daemon: setenv BARTLBY_HOME (for triggers) sched:
	  wait_open timeout mail.sh: sendmail trigger trigger: $1 == email
	  $2 == icq $3 == name $4 == msg

2005-09-24 12:34  hjanuschka

	* ChangeLog, src/check.c, src/sched.c: deadlock sched_wait_open
	  fixed

2005-09-23 20:21  hjanuschka

	* ChangeLog, src/check.c, src/sched.c: if check times out
	  curren_running gets in negative integer fixed default check
	  timeout 15 seconds

2005-09-22 04:55  hjanuschka

	* ChangeLog, src/check.c, src/client/agent.c: agent: def timeout 15
	  check: strreplace ' "

2005-09-19 00:30  hjanuschka

	* bartlby.cfg, src/sched.c: replication works now

2005-09-18 13:28  hjanuschka

	* ChangeLog, bartlby.cfg, include/bartlby.h, src/bartlby.c,
	  src/replication.c, src/sched.c, src/client/portier.c,
	  src/libs/mysql.c: replication now works :-) core: can run as
	  slave and load data from a file instead of data_lib ui: displays
	  a warning if in slave mode to not add/modify servers/services
	  portier: recieves and writes shm dump to disk so hot stand by
	  should be possible ;-) slave also does service checking

2005-09-18 07:05  hjanuschka

	* src/bartlby.c: compile warnings

2005-09-18 07:03  hjanuschka

	* bartlby.cfg, bartlby.startup, src/replication.c,
	  src/client/portier.c: replication is false by default now need to