@@ -1,3 +1,13 @@
+2005-09-27 21:39  hjanuschka
+
+	* src/: trigger.c, client/agent.c: trigger timeout agent local
+	  timeout
+
+2005-09-27 20:21  hjanuschka
+
+	* ChangeLog, Makefile, src/global.c, src/trigger.c,
+	  src/libs/mysql.c: [no log message]
+
 2005-09-25 18:31  hjanuschka
 
 	* include/bartlby.h, src/trigger.c, src/libs/mysql.c: trigger: can
